 2011-01-11 07:49  alexpeshkoff 
   M doc/README.fb_shutdown
front-ported doc changes

 2011-01-10 15:41  asfernandes 
   M src/jrd/RecordSourceNodes.h
Fixed CORE-3306 - Invariant sub-query is treated as variant thus causing multiple invokations of a nested stored procedure

 2011-01-09 21:58  asfernandes 
   M src/dsql/BoolNodes.cpp
   M src/dsql/DdlNodes.epp
   M src/dsql/DsqlCompilerScratch.cpp
   M src/dsql/ExprNodes.cpp
   M src/dsql/Parser.h
   M src/dsql/StmtNodes.cpp
   M src/dsql/gen.cpp
   M src/dsql/gen_proto.h
   M src/dsql/make.cpp
   M src/dsql/node.h
   M src/dsql/parse.y
   M src/dsql/pass1.cpp
   M src/jrd/RecordSourceNodes.cpp
   M src/jrd/RecordSourceNodes.h
Refactor nod_aggregate, nod_relation, nod_rse, nod_derived_table, nod_query_spec and nod_limit

 2011-01-07 11:32  dimitr 
   M src/dsql/AggNodes.cpp
   M src/jrd/opt.cpp
Fixed CORE-3302: Distinct aggregates return wrong (duplicated) data.

 2010-12-29 00:49  asfernandes 
   M src/jrd/svc.cpp
   M src/remote/inet.cpp
   M src/remote/remote.h
   M src/remote/server/server.cpp
Misc

 2010-12-27 00:34  asfernandes 
   M src/dsql/BoolNodes.cpp
   M src/dsql/BoolNodes.h
   M src/dsql/ExprNodes.cpp
   M src/dsql/ExprNodes.h
   M src/dsql/parse.y
Make UNKNOWN a boolean value/test, and not something exactly like NULL

 2010-12-23 18:42  asfernandes 
   M src/dsql/StmtNodes.cpp
   M src/dsql/StmtNodes.h
   M src/dsql/gen.cpp
   M src/dsql/metd.epp
   M src/dsql/metd_proto.h
   M src/dsql/node.h
   M src/dsql/parse.y
   M src/dsql/pass1.cpp
   M src/dsql/pass1_proto.h
Refactored the DSQL support of cursor statements, execute procedure and execute statement

 2010-12-19 21:42  asfernandes 
   M src/dsql/DdlNodes.epp
   M src/dsql/ExprNodes.cpp
   M src/dsql/ExprNodes.h
   M src/dsql/gen.cpp
   M src/dsql/make.cpp
   M src/dsql/node.h
   M src/dsql/pass1.cpp
Refactor DSQL's nod_field

 2010-12-19 18:57  asfernandes 
   M src/dsql/BoolNodes.cpp
   M src/dsql/parse.y